# Historical-Document-OCR

./: .gitignore  README.md  app.py  gemini_client.py  main.py  prompts.py  pyproject.toml  schemas.py  similarity.py
output/: download.txt
templates/: index.html  transcription.html
